Added IRepositry and implemented Repository class

--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li class="nav-item dropdown" >
                             <a class="nav-link text-white dropdown-toggle"  href="#" id="navbarDropDown" data-toggle="dropdown" >Admin</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item text-dark" asp-page="/Admin/CategoryIndex">Category</a>
+                                <a class="dropdown-item text-dark" asp-page="/Admin/Category/Index">Category</a>
                                 <a class="dropdown-item text-dark" asp-page="/Admin/FoodType/Index">Food Type</a>
                                 <a class="dropdown-item text-dark" asp-page="/Admin/MenuItem/Index">Menu Item</a>
                                 <a class="dropdown-item text-dark" asp-page="/Admin/Users/Index">Manage Users</a>
