--- a/FoodDelivery/Pages/Admin/Category/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Category/Index.cshtml
@@ -5,38 +5,26 @@
     ViewData["Title"] = "Categories";
 }
 
-<h1>CategoryIndex</h1>
+<h1>Categories</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<table class="table">
+<table id="DT_load" class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Category[0].Name)
+                Category Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category[0].DisplayOrder)
+                Display Order
             </th>
             <th></th>
         </tr>
     </thead>
-    <tbody>
-        @foreach (var item in Model.Category) {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DisplayOrder)
-                    </td>
-                    <td>
-                        <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>
-                </tr>
-         }
-    </tbody>
 </table>
+@section Scripts{ 
+<script src="~/js/category.js"></script>
+}
+
+
