Updated through video 5 of 7 week 3

--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
     <link rel="stylesheet" type="text/css" href="~/css/toastr.css" />
     <link rel="stylesheet" type="text/css" href="~/css/jquery-ui.min.css" />
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css" />
 </head>
 <body>
