--- a/FoodDelivery/Pages/Admin/Category/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Category/Index.cshtml
@@ -7,9 +7,13 @@
 
 <h1>Categories</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-right">
+            <a asp-page="Upsert" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp; Create New</a>
+        </div>
+    </div>
+</div>
 <table id="DT_load" class="table table-striped table-bordered">
     <thead>
         <tr>
