--- a/FoodDelivery/Pages/Admin/Category/Upsert.cshtml
+++ b/FoodDelivery/Pages/Admin/Category/Upsert.cshtml
@@ -10,7 +10,7 @@
             @* All for Model validation and HTML validation *@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="col-12 px-3" style="border-bottom:1px solid #325d88">
-                <h2 class="text-primary">Update Category</h2>
+                <h2 class="text-primary">@(Model.CategoryObj.Id != 0 ? "Update" : "Create") Category</h2>
             </div>
             <div class="col-8 pt-3">
                 <div class="form-group row">
@@ -35,7 +35,7 @@
                     <div class="col-9 offset-3">
                         <div class="row">
                             <div class="col-6">
-                                <button type="submit" class="btn btn-primary form-control">Update</button>
+                                <button type="submit" class="btn btn-primary form-control">@(Model.CategoryObj.Id != 0 ? "Update" : "Create")</button>
                             </div>
                             <div class="col-6">
                                 <a asp-page="./Index" class="btn btn-success form-control">Back to List</a>
