--- a/FoodDelivery/Pages/Admin/Category/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Category/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-right">
-            <a asp-page="Upsert" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp; Create New</a>
+            <a asp-page="Upsert" asp-route-id="0" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp; Create New</a>
         </div>
     </div>
 </div>
