--- a/FoodDelivery/Pages/Admin/Category/Upsert.cshtml
+++ b/FoodDelivery/Pages/Admin/Category/Upsert.cshtml
@@ -21,6 +21,10 @@
                         <input class="form-control" asp-for="CategoryObj.Name" />
                         <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
                     </div>
+                        @if (Model.CategoryObj.Id != 0)
+                        {
+                            <input type="hidden" asp-for="CategoryObj.Id" />
+                        }
                 </div>
                 <div class="form-group row">
                     <div class="col-3">
