Added menuitem.js script to MenuItem page and implemented the js file

--- a/FoodDelivery/Pages/Admin/MenuItem/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/MenuItem/Index.cshtml
@@ -30,5 +30,5 @@
     </thead>
 </table>
 @section Scripts{
-    <script src="~/js/foodtype.js"></script>
+    <script src="~/js/menuitem.js"></script>
 }
