--- a/FoodDelivery/Pages/Customer/Home/Index.cshtml
+++ b/FoodDelivery/Pages/Customer/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <div class="col-12">
                         <div class="row my-3">
                             @foreach (var menuItem in Model.MenuItemList.Where(c => c.CategoryId == category.Id)) {
-                                <div class="col-lg-3 col-xl-3 col-md-6 pb-4">
+                                <div class="col-lg-3 col-xl-3 col-md-6 pb-4" style="max-width:35%">
                                     <div class="card" style="border:2px solid #008cba; border-radius: 5px; ">
                                         <div class="pl-3 pt-1 text-center">
                                             <h3 class="card-title text-primary"><b>@menuItem.Name</b></h3>
@@ -21,7 +21,7 @@
                                             <div class="col-6 badge badge-warning text-center" style="font-size:14px;">
                                                 @menuItem.Category.Name
                                             </div>
-                                            <div class="col-6 text-right h4" style="color:maroon;">
+                                            <div class="col-6 text-right h4" style="color:maroon; max-width:70%">
                                                 <b>$@menuItem.Price.ToString("0.00")</b>
                                             </div>
                                         </div><img src="@menuItem.Image" class="card-img-top p-2 rounded" />
