--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using FoodDelivery.Utility
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -56,14 +61,27 @@
                             </li>
                         }
 
-                        <li>
-                            <a class="nav-link text-white" asp-page="/Customer/Cart/Index">
+                        @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart) != null) {
+                            <li>
+                                <a class="nav-link text-white" asp-page="/Customer/Cart/Index">
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart); }
+
+                                    <i class="fas fa-shopping-cart"></i>&nbsp; (@count)
+                                </a>
+
+                            </li>
+                        } else {
+                            <li>
+                                <a class="nav-link text-white" asp-page="/Customer/Cart/Index">
 
 
-                                <i class="fas fa-shopping-cart"></i>&nbsp; (0)
-                            </a>
+                                    <i class="fas fa-shopping-cart"></i>&nbsp; (0)
+                                </a>
 
-                        </li>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
