--- a/FoodDelivery/Pages/Customer/Home/Details.cshtml
+++ b/FoodDelivery/Pages/Customer/Home/Details.cshtml
@@ -56,9 +56,15 @@
                         <div class="col-12 col-md-6 pb-1 ">
                             <a asp-page="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Back to List</a>
                         </div>
-                        <div class="col-12 col-md-6 ">
-                            <button type="submit" class="btn btn-primary btn-square form-control btn-lg" style="height:50px;">Add to Cart</button>
-                        </div>
+                        @if (!User.Identity.IsAuthenticated) {
+                            <div class="col-12 col-md-6 ">
+                                <a asp-area="Identity" asp-page="/Account/Login"  asp-route-returnUrl="/Customer/Home/Details?id=@Model.ShoppingCartObj.MenuItemId" class="btn btn-primary btn-square form-control btn-lg" style="height:50px;">Login to Add to Cart</a>
+                            </div>
+                        } else {
+                            <div class="col-12 col-md-6 ">
+                                <button type="submit" class="btn btn-primary btn-square form-control btn-lg" style="height:50px;">Add to Cart</button>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
