--- a/FoodDelivery/Pages/Admin/User/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/User/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
+@model FoodDelivery.Pages.Admin.User.IndexModel
+@{
+}
 
 <div class="border backgroundWhite container">
     <div class="row">
@@ -10,20 +13,55 @@
         </div>
     </div>
     <br /><br />
-    <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+    <table class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
                 <th>Full Name</th>
                 <th>E-Mail</th>
                 <th>Phone Number</th>
-                
-                <th></th>
+                <th>Role</th>
+                <th>Lock/Unlock</th>
+                <th>Actions</th>
             </tr>
         </thead>
+        <tbody>
+
+            @{
+                foreach (var user in Model.ApplicationUsers) {
+                        <tr>
+                            <td>@user.FullName</td>
+                            <td>@user.Email</td>
+                            <td>@user.PhoneNumber</td>
+                            <td>
+                                <ul>
+                                    @{
+                                        foreach (var r in Model.UserRoles[user.Id]) {
+                                            <li>
+                                                @r
+                                            </li>
+                                        }
+                                    }
+                                </ul>
+                            </td>
+                        <td>
+                            <form method="post">
+                                @{
+                                    if (user.LockoutEnd > DateTime.Now) {
+                                        <button type="submit" class="btn btn-outline-warning" asp-page-handler="lockUnlock" asp-route-id="@user.Id"><i class="fas fa-lock-open"></i> Unlock</button>
+                                    } else {
+                                        <button type="submit" class="btn btn-outline-warning" asp-page-handler="lockUnlock" asp-route-id="@user.Id"><i class="fas fa-lock"></i> Lock</button>
+                                    }
+                                }
+                            </form>
+                        </td>
+                        <td>
+                            <a class="btn btn-outline-success" asp-page="/Admin/User/Update" asp-route-id="@user.Id">Update</a>
+                            <a class="btn btn-outline-danger" asp-page="/Admin/User/Delete" asp-route-id="@user.Id">Delete</a>
+                        </td>
+                        </tr>
+                }
+            }
+
+        </tbody>
     </table>
 </div>
-
-@section Scripts{
-    <script src="~/js/user.js"></script>
-}
-
