--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using FoodDelivery.Utility
+﻿@using Infrastructure
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 
