Added references to new namespaces

--- a/FoodDelivery/Pages/Admin/FoodTypes/Upsert.cshtml
+++ b/FoodDelivery/Pages/Admin/FoodTypes/Upsert.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FoodDelivery.Pages.Admin.FoodType.UpsertModel
+@model FoodDelivery.Pages.Admin.FoodTypes.UpsertModel
 @{
 }
 <form method="post" asp-action="Upsert">
