--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
                                     Admin
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item text-black" asp-page="/Admin/Category/Index">Category</a>
-                                    <a class="dropdown-item text-black" asp-page="/Admin/FoodType/Index">Food Type</a>
-                                    <a class="dropdown-item text-black" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+                                    <a class="dropdown-item text-black" asp-page="/Admin/Categories/Index">Category</a>
+                                    <a class="dropdown-item text-black" asp-page="/Admin/FoodTypes/Index">Food Type</a>
+                                    <a class="dropdown-item text-black" asp-page="/Admin/MenuItems/Index">Menu Item</a>
                                     <a class="dropdown-item text-black" asp-page="/Admin/Roles/Roles">Roles</a>
                                     <a class="dropdown-item text-black" asp-page="/Admin/User/Index">User</a>
                                 </div>
