--- a/FoodDelivery/Pages/Admin/User/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/User/Index.cshtml
@@ -13,13 +13,15 @@
         </div>
     </div>
     <br /><br />
+    <p class="hidden" id="success">@Model.Success.ToString()</p>
+    <p class="hidden" id="message">@Model.Message</p>
     <table class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
                 <th>Full Name</th>
                 <th>E-Mail</th>
                 <th>Phone Number</th>
-                <th>Role</th>
+                <th>Role(s)</th>
                 <th>Lock/Unlock</th>
                 <th>Actions</th>
             </tr>
@@ -28,21 +30,28 @@
 
             @{
                 foreach (var user in Model.ApplicationUsers) {
-                        <tr>
-                            <td>@user.FullName</td>
-                            <td>@user.Email</td>
-                            <td>@user.PhoneNumber</td>
-                            <td>
-                                <ul>
-                                    @{
-                                        foreach (var r in Model.UserRoles[user.Id]) {
-                                            <li>
-                                                @r
-                                            </li>
+                    <tr>
+                        <td>@user.FullName</td>
+                        <td>@user.Email</td>
+                        <td>@user.PhoneNumber</td>
+                        <td>
+                            @{
+                                if (Model.UserRoles[user.Id].Count() == 1) {
+                                    @Model.UserRoles[user.Id].First()
+                                } else {
+                                    <ul>
+                                        @{
+                                            foreach (var r in Model.UserRoles[user.Id]) {
+                                                <li>
+                                                    @r
+                                                </li>
+                                            }
                                         }
-                                    }
-                                </ul>
-                            </td>
+                                    </ul>
+                                }
+                            }
+
+                        </td>
                         <td>
                             <form method="post">
                                 @{
@@ -58,10 +67,25 @@
                             <a class="btn btn-outline-success" asp-page="/Admin/User/Update" asp-route-id="@user.Id">Update</a>
                             <a class="btn btn-outline-danger" asp-page="/Admin/User/Delete" asp-route-id="@user.Id">Delete</a>
                         </td>
-                        </tr>
+                    </tr>
                 }
             }
 
         </tbody>
     </table>
 </div>
+@section Scripts{
+    <script>
+        function alertFunc() {
+            var success = $("#success").html()
+            var message = $("#message").html();
+            console.log(success);
+            console.log(message);
+            if (success == "True") {
+                toastr.success(message);
+            };
+            
+        }
+        window.onload = alertFunc();
+    </script>
+}
