SonarQube bug fixes

--- a/FoodDelivery/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -10,6 +10,14 @@
 {
     <h4>Registered Logins</h4>
     <table class="table">
+        <tr>
+            <th scope="row">
+                Login Provider
+            </th>
+            <th scope="row">
+                Remove Button
+            </th>
+        </tr>
         <tbody>
             @foreach (var login in Model.CurrentLogins)
             {
