--- a/FoodDelivery/Pages/Admin/User/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/User/Index.cshtml
@@ -18,12 +18,12 @@
     <table class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th>Full Name</th>
-                <th>E-Mail</th>
-                <th>Phone Number</th>
-                <th>Role(s)</th>
-                <th>Lock/Unlock</th>
-                <th>Actions</th>
+                <th scope="col">Full Name</th>
+                <th scope="col">E-Mail</th>
+                <th scope="col">Phone Number</th>
+                <th scope="col">Role(s)</th>
+                <th scope="col">Lock/Unlock</th>
+                <th scope="col">Actions</th>
             </tr>
         </thead>
         <tbody>
